--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  font-family: "Montserrat-Regular", sans-serif;
 }
 
 body {
@@ -18,4 +19,52 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+:root {
+  --header-bg: #f4f4f4;
+  --footer-bg: #f4f4f4;
+  --main-bg: #ffffff;
+  --primary-accent: #a45680;
+  --light-accent: #d8a5bc;
+  --mint-accent: #a5d8c2;
+  --creamy-accent: #f2e4ec;
+}
+
+ul,
+ol,
+li {
+  list-style: none;
+}
+
+@font-face {
+  font-family: "SeaweedScript";
+  src: url("../fonts/SeaweedScript-Regular.ttf") format("truetype");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Montserrat-Regular";
+  src: url("../fonts/Montserrat-Regular.ttf") format("truetype");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Montserrat-Medium";
+  src: url("../fonts/Montserrat-Medium.ttf") format("truetype");
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Montserrat-Bold";
+  src: url("../fonts/Montserrat-Bold.ttf") format("truetype");
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
 }
