--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -6,10 +6,14 @@
 }
 
 .main {
-  padding: 100px 80px;
+  padding: 44px 0;
   display: flex;
   flex-direction: column;
   gap: 32px;
+
+  @media (min-width: 768px) {
+    padding: 68px 0;
+  }
 }
 
 .header {
