--- a/src/components/Header/Burger/Burger.module.css
+++ b/src/components/Header/Burger/Burger.module.css
@@ -20,7 +20,7 @@
 .burger span {
   width: 2rem;
   height: 0.25rem;
-  background-color: #a45680;
+  background-color: var(--pink-color);
   border-radius: 10px;
   transition: all 0.3s linear;
   transform-origin: 1px;
