--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -79,16 +79,17 @@
 
 .navLink {
   font-size: 1.5rem;
+  font-weight: 700;
   color: var(--pink-color);
   display: inline-block;
   transition: color 0.3s ease, transform 0.3s ease;
 
   @media (min-width: 768px) {
-    font-size: 1.8rem;
+    font-size: 1.5rem;
   }
 
   @media (min-width: 1440px) {
-    font-size: 2.2rem;
+    font-size: 2rem;
   }
 }
 
