add pages, update Header and Hero section

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,8 +22,8 @@ a {
 }
 
 :root {
-  --header-bg: #f2e8b6;
-  --footer-bg: #f2e8b6;
+  --header-bg: #F4EAD6;
+  --footer-bg: #F4EAD6;
   --main-bg: #ffffff;
 
   --pink-color: #d97e9f;
