--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -99,7 +99,7 @@
 }
 
 .dropdownMenu {
-  display: block;
+  display: none;
   position: absolute;
   top: 100%;
   left: 0;
@@ -129,6 +129,7 @@
   .navList {
     display: flex;
     flex-direction: column;
+    gap: 1rem;
   }
 
   .dropdownMenu {
