--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -2,19 +2,19 @@
   display: grid;
   grid-template-rows: auto 1fr auto;
   min-height: calc(100vh - 250px);
-  gap: 64px;
 }
 
 .main {
-  padding: 44px 0;
+  padding: 44px 0 0;
   display: flex;
   flex-direction: column;
   gap: 32px;
 
   @media (min-width: 768px) {
-    padding: 62px 0;
+    padding: 62px 0 0;
   }
 }
+
 
 .header {
   margin: 0;
