--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -1,10 +1,11 @@
 .hero {
-  width: 100%;
   position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100%;
   overflow: hidden;
+  padding: 0;
 }
 
 .imageWrapper {
