--- a/src/components/Sasha/Sasha.module.css
+++ b/src/components/Sasha/Sasha.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin-bottom: 12px;
+  /* margin-bottom: 12px; */
 
   @media screen and (min-width: 768px) {
     display: flex;
@@ -14,11 +14,15 @@
 }
 
 .photoWrapper {
-  max-width: 50%;
-  margin: 24px auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 280px;
+  margin: 0 auto 1rem;
 
   @media screen and (min-width: 768px) {
     margin: 24px auto;
+    max-width: 50%;
     order: 2;
   }
 }
@@ -40,11 +44,12 @@
 
 .infoWrapper p {
   line-height: 1.3;
-  margin-bottom: 16px;
+  margin-bottom: 1rem;
 
   color: var(--pink-color);
 
-  font-size: 3rem;
+  font-size: 2rem;
+  text-align: center;
 
   @media screen and (min-width: 768px) {
     font-size: 3rem;
@@ -55,6 +60,7 @@
 .infoWrapper h1 {
   margin-bottom: 16px;
 }
+
 .infoWrapper h1 span {
   margin-bottom: 16px;
 }
@@ -68,14 +74,15 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  flex-direction: column;
   align-items: center;
   gap: 36px;
 
   @media screen and (max-width: 767px) {
-    flex-direction: column;
   }
 
   @media screen and (min-width: 768px) {
+    flex-direction: row;
     flex-wrap: wrap;
   }
 }
