--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -98,12 +98,19 @@ img {
 }
 
 section {
-  padding: 44px 0;
+  padding: 16px 0;
   display: flex;
   flex-direction: column;
-  gap: 32px;
+  gap: 16px;
 
   @media (min-width: 768px) {
-    padding: 62px 0;
+    display: block;
+    padding: 32px 0;
   }
+
+  @media (min-width: 1440px) {
+    padding: 64px 0;
+  }
+
+  outline: 1px solid green;
 }
