--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -57,9 +57,19 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    gap: 2rem;
+    gap: 1.2rem;
     transform: translateY(0);
     opacity: 1;
+  }
+
+  @media screen and (min-width: 920px) {
+    gap: 2rem;
+    font-size: 1.2rem;
+  }
+
+  @media screen and (min-width: 1200px) {
+    gap: 2.5rem;
+    font-size: 1.2rem;
   }
 }
 
@@ -82,18 +92,18 @@
 } */
 
 .navLink {
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   font-weight: 700;
   color: var(--pink-color);
   display: inline-block;
   transition: color 0.3s ease, transform 0.3s ease;
 
   @media (min-width: 768px) {
-    font-size: 1.5rem;
+    font-size: 1.2rem;
   }
 
   @media (min-width: 1440px) {
-    font-size: 2rem;
+    font-size: 1.5rem;
   }
 }
 
