--- a/src/components/Sasha/Sasha.module.css
+++ b/src/components/Sasha/Sasha.module.css
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  /* margin-bottom: 12px; */
 
   @media screen and (min-width: 768px) {
     display: flex;
@@ -19,10 +18,11 @@
   align-items: center;
   width: 280px;
   margin: 0 auto 1rem;
+  width: 50%;
 
   @media screen and (min-width: 768px) {
     margin: 24px auto;
-    max-width: 50%;
+    width: 50%;
     order: 2;
   }
 }
@@ -49,6 +49,7 @@
   color: var(--pink-color);
 
   font-size: 2rem;
+  font-weight: 700;
   text-align: center;
 
   @media screen and (min-width: 768px) {
@@ -59,70 +60,127 @@
 
 .infoWrapper h1 {
   margin-bottom: 16px;
+  text-align: center;
 }
 
 .infoWrapper h1 span {
-  margin-bottom: 16px;
-}
-
-.infoWrapper h2 {
-  font-weight: normal;
-  font-size: 1.5rem;
-}
-
-.help {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-  gap: 36px;
-
-  @media screen and (max-width: 767px) {
-  }
-
-  @media screen and (min-width: 768px) {
-    flex-direction: row;
-    flex-wrap: wrap;
-  }
-}
-
-.card {
-  min-width: 300px;
-  min-height: 480px;
-  background-color: var(--light-color);
-  margin-bottom: 20px;
-  border-radius: 8px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-  &:hover {
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-      1px 4px 6px rgba(0, 0, 0, 0.16);
-  }
-
-  @media screen and (min-width: 768px) {
-    flex-basis: calc((100% - 72px) / 2);
-  }
-
-  @media screen and (min-width: 1200px) {
-    flex-basis: calc((100% - 144px) / 3);
-  }
-}
-.image {
-  object-fit: contain;
-}
-
-.card h3 {
-  margin-top: 0;
+  font-size: 2rem;
+  color: var(--pink-color);
 }
 
 .description {
-  padding: 15px;
+  border-radius: 10px;
+  padding: 1.5rem;
 }
 
-.descriptionTitle {
-  margin-bottom: 10px;
+.description p,
+.description h2 {
+  margin-bottom: 12px;
   font-size: 1.2rem;
+  font-weight: 500;
+
+
+  @media screen and (min-width: 768px) {
+    font-size: 1.5rem;
+  }
+
+  @media screen and (min-width: 1440px) {
+    font-size: 2rem;
+  }
+}
+
+.description a {
+  color: var(--pink-color);
+  font-weight: 700;
+
+  &:hover {
+    text-decoration: underline;
+    transform: scale(1.05);
+  }
+}
+
+.featuresList {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 0 1rem;
+  margin-bottom: 24px;
+  text-align: left;
+  font-size: 1rem;
+
+  @media screen and (min-width: 768px) {
+    font-size: 1.2rem;
+  }
+
+  @media screen and (min-width: 1440px) {
+    font-size: 1.5rem;
+  }
+}
+
+.buttonContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  gap: 12px;
+
+  @media screen and (min-width: 768px) {
+    flex-direction: row;
+  }
+
+  @media screen and (min-width: 920px) {
+    justify-content: center;
+    gap: 24px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    justify-content: center;
+    gap: 36px;
+  }
+}
+
+.button {
+  min-width: 230px;
+  padding: 0.7rem;
+
+  font-size: 1rem;
+  font-weight: 600;
+  text-align: center;
+  border-radius: 5px;
+  background-color: var(--pink-color);
+  color: var(--creamy-color);
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.button:hover {
+  transform: scale(1.05);
+}
+
+.button:active {
+  transform: scale(1);
+  background-color: var(--light-color);
+  color: var(--pink-color);
+  border: 3px solid var(--pink-color);
+}
+
+@media (max-width: 768px) {
+  .cta-button {
+    font-size: 1rem;
+    padding: 0.8rem 1.5rem;
+  }
+}
+
+@media (min-width: 768px) {
+  .cta-button {
+    font-size: 1.2rem;
+    padding: 1rem 2.5rem;
+  }
+}
+
+@media (min-width: 1440px) {
+  .cta-button {
+    font-size: 1.3rem;
+    padding: 1.2rem 3rem;
+  }
 }
