--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -110,6 +110,8 @@
 .navLink:hover {
   transform: scale(1.05);
   text-decoration: underline;
+  text-underline-offset: 3px;
+
 }
 
 .dropdownMenu {
