--- a/src/components/Sasha/Sasha.module.css
+++ b/src/components/Sasha/Sasha.module.css
@@ -79,7 +79,6 @@
   font-size: 1.2rem;
   font-weight: 500;
 
-
   @media screen and (min-width: 768px) {
     font-size: 1.5rem;
   }
@@ -96,6 +95,7 @@
   &:hover {
     text-decoration: underline;
     transform: scale(1.05);
+    text-underline-offset: 3px;
   }
 }
 
