--- a/src/components/Sasha/Sasha.module.css
+++ b/src/components/Sasha/Sasha.module.css
@@ -18,7 +18,6 @@
   align-items: center;
   width: 280px;
   margin: 0 auto 1rem;
-  width: 50%;
 
   @media screen and (min-width: 768px) {
     margin: 24px auto;
@@ -30,7 +29,9 @@
 .photo {
   width: 100%;
   border-radius: 12%;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  /* box-shadow: 4px 8px 18px rgba(0, 0, 0, 0.2); */
+  box-shadow: 0px 4px 15px rgba(111, 154, 191, 0.5),
+    0px 8px 30px rgba(167, 216, 194, 0.3);
 }
 
 .infoWrapper {
@@ -43,41 +44,70 @@
 }
 
 .infoWrapper p {
-  line-height: 1.3;
-  margin-bottom: 1rem;
-
   color: var(--pink-color);
-
   font-size: 2rem;
   font-weight: 700;
+
   text-align: center;
 
   @media screen and (min-width: 768px) {
+    /* margin-bottom: 1.5rem; */
+    text-align-last: left;
     font-size: 3rem;
-    margin-bottom: 24px;
   }
 }
 
-.infoWrapper h1 {
-  margin-bottom: 16px;
+.infoWrapper h2 {
+  margin-bottom: 2rem;
+
   text-align: center;
+
+  @media screen and (min-width: 768px) {
+    text-align: left;
+    font-size: 1.2rem;
+    margin-bottom: 1.2rem;
+  }
+
+  /* @media screen and (min-width: 768px) {
+    margin-bottom: 1.5rem;
+  }
+
+  @media screen and (min-width: 1440px) {
+    margin-bottom: 2.5rem;
+  } */
 }
 
-.infoWrapper h1 span {
+.infoWrapper h2 span {
   font-size: 2rem;
   color: var(--pink-color);
 }
 
 .description {
-  border-radius: 10px;
-  padding: 1.5rem;
 }
 
-.description p,
-.description h2 {
-  margin-bottom: 12px;
-  font-size: 1.2rem;
+.description li {
+  margin-bottom: 0.5rem;
   font-weight: 500;
+  padding-left: 1rem;
+
+  @media screen and (min-width: 768px) {
+    font-size: 1.2rem;
+    margin-bottom: 0.8rem;
+    padding: 0;
+  }
+
+  @media screen and (min-width: 1440px) {
+    font-size: 1.4rem;
+    margin-bottom: 1rem;
+  }
+}
+
+.description li::before {
+  content: "\2714";
+
+  padding-right: 0.5rem;
+  color: var(--pink-color);
+  font-size: 1.2rem;
 
   @media screen and (min-width: 768px) {
     font-size: 1.5rem;
@@ -105,11 +135,12 @@
   gap: 1rem;
   padding: 0 1rem;
   margin-bottom: 24px;
-  text-align: left;
   font-size: 1rem;
 
   @media screen and (min-width: 768px) {
-    font-size: 1.2rem;
+    width: 95%;
+    margin: 0 auto 24px;
+    font-size: 1.1rem;
   }
 
   @media screen and (min-width: 1440px) {
