--- a/src/components/Sections/Sasha/Sasha.module.css
+++ b/src/components/Sections/Sasha/Sasha.module.css
@@ -24,14 +24,20 @@
     width: 50%;
     order: 2;
   }
+
+  @media screen and (min-width: 1440px) {
+    height: calc(100vh - 128px);
+    width: auto;
+    margin: 0 auto;
+  }
 }
 
 .photo {
-  width: 100%;
   border-radius: 12%;
-  /* box-shadow: 4px 8px 18px rgba(0, 0, 0, 0.2); */
   box-shadow: 0px 4px 15px rgba(111, 154, 191, 0.5),
     0px 8px 30px rgba(167, 216, 194, 0.3);
+  height: 100%;
+  width: auto;
 }
 
 .infoWrapper {
@@ -86,36 +92,29 @@
 }
 
 .description li {
-  margin-bottom: 0.5rem;
+  /* margin-bottom: 0.5rem; */
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  padding: 0.5rem 0 0.5rem;
+  gap: 0.5rem;
+  border-bottom: 1px solid var(--pink-color);
+
   font-weight: 500;
-  padding-left: 1rem;
 
   @media screen and (min-width: 768px) {
-    font-size: 1.2rem;
-    margin-bottom: 0.8rem;
-    padding: 0;
+    font-size: 1.1rem;
+    padding: 0.8rem 0 0.8rem;
   }
 
   @media screen and (min-width: 1440px) {
-    font-size: 1.4rem;
-    margin-bottom: 1rem;
+    font-size: 1.3rem;
+    padding: 1.2rem 0 1.2rem;
   }
 }
 
-.description li::before {
-  content: "\2714";
-
-  padding-right: 0.5rem;
-  color: var(--pink-color);
-  font-size: 1.2rem;
-
-  @media screen and (min-width: 768px) {
-    font-size: 1.5rem;
-  }
-
-  @media screen and (min-width: 1440px) {
-    font-size: 2rem;
-  }
+.description li:first-child {
+  border-top: 1px solid var(--pink-color);
 }
 
 .description a {
@@ -129,89 +128,42 @@
   }
 }
 
-.featuresList {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  padding: 0 1rem;
-  margin-bottom: 24px;
-  font-size: 1rem;
+.icon {
+  width: 24px;
+  height: 24px;
+  display: inline-block;
+  vertical-align: middle;
+  flex-shrink: 0;
 
   @media screen and (min-width: 768px) {
-    width: 95%;
-    margin: 0 auto 24px;
-    font-size: 1.1rem;
+    width: 32px;
+    height: 32px;
   }
 
-  @media screen and (min-width: 1440px) {
-    font-size: 1.5rem;
-  }
-}
-
-.buttonContainer {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
-  gap: 12px;
-
-  @media screen and (min-width: 768px) {
-    flex-direction: row;
-  }
-
-  @media screen and (min-width: 920px) {
-    justify-content: center;
-    gap: 24px;
+  @media screen and (min-width: 960px) {
+    width: 40px;
+    height: 40px;
   }
 
   @media screen and (min-width: 1200px) {
-    justify-content: center;
-    gap: 36px;
+    width: 36px;
+    height: 36px;
   }
 }
 
-.button {
-  min-width: 230px;
-  padding: 0.7rem;
 
-  font-size: 1rem;
-  font-weight: 600;
-  text-align: center;
-  border-radius: 5px;
-  background-color: var(--pink-color);
-  color: var(--creamy-color);
-  cursor: pointer;
-  transition: all 0.3s ease;
-}
+/* .description li::before {
+  content: "\2714";
 
-.button:hover {
-  transform: scale(1.05);
-}
-
-.button:active {
-  transform: scale(1);
-  background-color: var(--light-color);
+  padding-right: 0.5rem;
   color: var(--pink-color);
-  border: 3px solid var(--pink-color);
-}
+  font-size: 1.2rem;
 
-@media (max-width: 768px) {
-  .cta-button {
-    font-size: 1rem;
-    padding: 0.8rem 1.5rem;
+  @media screen and (min-width: 768px) {
+    font-size: 1.5rem;
   }
-}
 
-@media (min-width: 768px) {
-  .cta-button {
-    font-size: 1.2rem;
-    padding: 1rem 2.5rem;
+  @media screen and (min-width: 1440px) {
+    font-size: 2rem;
   }
-}
-
-@media (min-width: 1440px) {
-  .cta-button {
-    font-size: 1.3rem;
-    padding: 1.2rem 3rem;
-  }
-}
+} */
