--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,8 @@
 :root {
-  --header-bg: #f4ead6;
-  --footer-bg: #f4ead6;
-  --main-bg: #f4ead6;
+  --header-bg: #fdf8ee;
+  --footer-bg: #fdf8ee;
+  --main-bg: #fdf8ee;
+
   --text-color: #733c30;
   --card-bg: #f4ead6;
 
@@ -56,7 +57,6 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
   font-family: "Montserrat-Regular", sans-serif;
-  background: var(--main-bg);
   color: var(--text-color);
 }
 
@@ -110,8 +110,18 @@ section {
 
   @media (min-width: 1440px) {
     padding: 64px 0;
-    height: 100vh;
+    /* height: 100vh; */
   }
 
   /* outline: 1px solid green; */
+}
+
+section:nth-child(even) {
+  background-color: var(--main-bg); /* Основний фон */
+  /* color: var(--text-color); Колір тексту */
+}
+
+section:nth-child(odd) {
+  background-color: var(--white); /* Білий фон */
+  /* color: var(--main-bg); Текст контрастний до основного */
 }
