--- a/src/components/Sections/Sasha/Sasha.module.css
+++ b/src/components/Sections/Sasha/Sasha.module.css
@@ -129,11 +129,12 @@
 }
 
 .icon {
-  width: 24px;
-  height: 24px;
+  width: 30px;
+  height: 30px;
   display: inline-block;
   vertical-align: middle;
   flex-shrink: 0;
+  padding: 5px;
 
   @media screen and (min-width: 768px) {
     width: 32px;
@@ -141,13 +142,28 @@
   }
 
   @media screen and (min-width: 960px) {
-    width: 40px;
-    height: 40px;
+    width: 36px;
+    height: 36px;
   }
 
   @media screen and (min-width: 1200px) {
-    width: 36px;
-    height: 36px;
+    width: 64px;
+    height: 64px;
+
+    .question {
+      border: 4px solid var(--blue-color);
+      border-radius: 50%;
+    }
+
+    .icon.check {
+      border: 4px solid var(--pink-color);
+      border-radius: 50%;
+    }
+
+    .icon.arrow {
+      border: 4px solid var(--mint-color);
+      border-radius: 50%;
+    }
   }
 }
 
