--- a/src/components/Sections/Features/Features.module.css
+++ b/src/components/Sections/Features/Features.module.css
@@ -15,7 +15,7 @@
     gap: 2rem;
 
     width: 95%;
-    margin: 0 auto 2rem;
+    margin: 0 auto 3rem;
     padding: 0 2rem;
 
     font-size: 1.1rem;
@@ -24,7 +24,7 @@
   @media screen and (min-width: 1440px) {
     font-size: 1.5rem;
     gap: 3rem;
-    margin-bottom: 3rem;
+    margin-bottom: 4rem;
   }
 }
 
@@ -46,20 +46,17 @@
   text-align: center;
 }
 
-.featuresList li::before {
-  content: "";
-  position: absolute;
-  top: -1px;
-  left: 50%;
-  width: 18%;
-  height: 1px;
-  background-color: var(--main-bg);
-  transform: translateX(-50%);
+@media screen and (min-width: 480px) {
+  .featuresList li {
+    width: 80%;
+    margin: 0 auto;
+  }
 }
 
 @media screen and (min-width: 768px) {
   .featuresList li {
     width: calc(33% - 2rem);
+    margin-bottom: 2rem;
   }
 }
 
@@ -67,6 +64,21 @@
   .featuresList li {
     width: calc(33% - 2rem);
     padding: 0 2rem 2rem;
+  }
+}
+
+.featuresList li::before {
+  content: "";
+  position: absolute;
+  top: -1px;
+  left: 50%;
+  width: 15%;
+  height: 1px;
+  background-color: var(--main-bg);
+  transform: translateX(-50%);
+
+  @media screen and (min-width: 768px) {
+    width: 25%;
   }
 }
 
@@ -82,6 +94,8 @@
   top: -0.8rem;
 
   @media screen and (min-width: 768px) {
+    top: -1rem;
+
     width: 28px;
     height: 28px;
   }
