--- a/src/components/Contacts/Contacts.module.css
+++ b/src/components/Contacts/Contacts.module.css
@@ -3,31 +3,43 @@
   justify-content: center;
   align-items: center;
   min-height: calc(100vh - 95px);
-  padding: 1rem;
-  background: var(--main-bg);
+  background: linear-gradient(
+      rgba(255, 255, 255, 0.85),
+      rgba(255, 255, 255, 0.85)
+    ),
+    url("/assets/images/Castle.jpg") no-repeat center;
+  background-size: cover;
 }
 
-.title {
+.contactWrapper {
+  width: 100%;
+  max-width: 500px;
+  padding: 2rem 1rem;
+  margin: 0 auto;
+}
+
+.contactTitle {
   margin-bottom: 0.5rem;
 
   font-size: 1.8rem;
   font-weight: 700;
-  text-align: left;
+  text-align: center;
   color: var(--pink-color);
   text-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+
+  @media (min-width: 480px) {
+    text-align-last: left;
+  }
 }
 
 .contactList {
   list-style: none;
-  padding-left: 1rem;
 }
 
 .contactItem {
   font-size: 1.2rem;
   margin: 0 0 1rem;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
+
   color: var(--dark-color);
   text-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
   gap: 1rem;
