--- a/src/components/Container/Container.module.css
+++ b/src/components/Container/Container.module.css
@@ -28,3 +28,29 @@
     padding: 0 64px;
   }
 }
+
+.containerWithoutPadding {
+  min-width: var(--breakpoint-mobile);
+  width: 100%;
+  margin: 0 auto;
+
+  /* @media only screen and (min-width: 480px) {
+    width: 480px;
+  }
+
+  @media only screen and (min-width: 768px) {
+    width: var(--breakpoint-tablet);
+  }
+
+  @media only screen and (min-width: 960px) {
+    width: 960px;
+  }
+
+  @media only screen and (min-width: 1200px) {
+    width: 1200px;
+  }
+
+  @media only screen and (min-width: 1440px) {
+    width: var(--breakpoint-desktop);
+  } */
+}
