--- a/src/components/Sections/Testimonials/Testimonials.module.css
+++ b/src/components/Sections/Testimonials/Testimonials.module.css
@@ -6,13 +6,13 @@
 .embla__container {
   display: flex;
   padding: 20px;
-  margin: 0 auto 1rem;
+  margin: 0 auto;
 
-  @media (min-width: 768px) {
+  @media screen and (min-width: 768px) {
     margin: 0 auto 2rem;
   }
 
-  @media (min-width: 1440px) {
+  @media screen and (min-width: 1440px) {
     margin: 0 auto 3rem;
   }
 }
@@ -21,25 +21,46 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  min-width: 220px;
+  min-width: 280px;
   margin-right: 20px;
   padding: 1rem 0.8rem 2rem;
 
   background: white;
-  border-radius: 10px;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  border-radius: 140px 140px 10px 10px;
 
-  @media (min-width: 480px) {
+  /* box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2); */
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15), 0 2px 4px rgba(0, 0, 0, 0.1);
+
+  @media screen and (min-width: 480px) {
     min-width: 300px;
   }
 
-  @media (min-width: 768px) {
-    min-width: 350px;
+  @media screen and (min-width: 768px) {
+    min-width: 400px;
     margin-right: 32px;
+    border-radius: 200px 200px 10px 10px;
   }
 
-  @media (min-width: 1440px) {
+  @media screen and (min-width: 1440px) {
     min-width: 400px;
+  }
+}
+
+.testimonialHeader {
+  margin-bottom: 0.5rem;
+  text-align: center;
+}
+
+.testimonialPhoto {
+  width: 150px;
+  height: 150px;
+  margin: 0 auto 0.5rem;
+  border-radius: 50%;
+  object-fit: cover;
+
+  @media screen and (min-width: 768px) {
+    width: 160px;
+    height: 160px;
   }
 }
 
@@ -47,15 +68,15 @@
   margin-bottom: 1rem;
   font-size: 0.7rem;
 
-  @media (min-width: 480px) {
+  @media screen and (min-width: 480px) {
     font-size: 0.8rem;
   }
 
-  @media (min-width: 768px) {
+  @media screen and (min-width: 768px) {
     font-size: 0.9rem;
   }
 
-  @media (min-width: 1440px) {
+  @media screen and (min-width: 1440px) {
     font-size: 1rem;
     margin-bottom: 1.5rem;
   }
@@ -74,13 +95,13 @@
 .prevButton,
 .nextButton {
   position: absolute;
-  top: 50%;
+  top: 5%;
   transform: translateY(-50%);
 
   padding: 10px 12px 12px;
   border-radius: 50%;
 
-  background-color: #d97e9fbb;
+  background-color: var(--pink-color);
   color: white;
   border: none;
 
@@ -88,17 +109,17 @@
   line-height: 0.5;
   cursor: pointer;
 
-  @media (min-width: 480px) {
+  @media screen and (min-width: 480px) {
     padding: 12px 16px 18px;
     font-size: 1.5rem;
   }
 
-  @media (min-width: 768px) {
+  @media screen and (min-width: 768px) {
     padding: 14px 18px 20px;
     font-size: 1.8rem;
   }
 
-  @media (min-width: 1440px) {
+  @media screen and (min-width: 1440px) {
     padding: 16px 20px 24px;
     font-size: 2rem;
   }
@@ -106,10 +127,50 @@
 
 .prevButton {
   left: 10px;
+
+  @media screen and (min-width: 480px) {
+    left: 45px;
+  }
+
+  @media screen and (min-width: 768px) {
+    left: 100px;
+  }
+
+  @media screen and (min-width: 960px) {
+    left: 200px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    left: 300px;
+  }
+
+  @media screen and (min-width: 1440px) {
+    left: 400px;
+  }
 }
 
 .nextButton {
   right: 10px;
+
+  @media screen and (min-width: 480px) {
+    right: 45px;
+  }
+
+  @media screen and (min-width: 768px) {
+    right: 100px;
+  }
+
+  @media screen and (min-width: 960px) {
+    right: 200px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    right: 300px;
+  }
+
+  @media screen and (min-width: 1440px) {
+    right: 400px;
+  }
 }
 
 .prevButton:hover,
