--- a/src/components/Sections/Testimonials/Testimonials.module.css
+++ b/src/components/Sections/Testimonials/Testimonials.module.css
@@ -124,35 +124,35 @@
 .prevButton,
 .nextButton {
   position: absolute;
-  top: 6%;
+  top: 8%;
   transform: translateY(-50%);
 
-  padding: 10px 12px 12px;
+  padding: 8px 16px;
   border-radius: 50%;
 
   background-color: var(--pink-color);
   color: white;
   border: none;
 
-  font-size: 1.2rem;
+  font-size: 1rem;
   line-height: 0.5;
   cursor: pointer;
 
   transition: all 0.3s ease-in-out;
 
   @media screen and (min-width: 480px) {
-    padding: 12px 16px 18px;
-    font-size: 1.5rem;
+    padding: 8px 16px;
+    font-size: 1.2rem;
   }
 
   @media screen and (min-width: 768px) {
-    padding: 12px 18px 20px;
-    font-size: 1.8rem;
+    padding: 8px 16px;
+    font-size: 1.2rem;
   }
 
-  @media screen and (min-width: 1440px) {
-    padding: 12px 22px 22px;
-    font-size: 2rem;
+  @media screen and (min-width: 1200px) {
+    padding: 10px 24px;
+    font-size: 1.5rem;
   }
 }
 
@@ -164,11 +164,11 @@
   }
 
   @media screen and (min-width: 768px) {
-    left: 200px;
+    left: 210px;
   }
 
   @media screen and (min-width: 960px) {
-    left: 255px;
+    left: 265px;
   }
 
   @media screen and (min-width: 1200px) {
@@ -188,11 +188,11 @@
   }
 
   @media screen and (min-width: 768px) {
-    right: 200px;
+    right: 210px;
   }
 
   @media screen and (min-width: 960px) {
-    right: 255px;
+    right: 265px;
   }
 
   @media screen and (min-width: 1200px) {
