--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,8 +15,10 @@
   --light-color: #f9f9f9;
 
   --breakpoint-mobile: 320px;
+  --breakpoint-mobile-large: 480px;
   --breakpoint-tablet: 768px;
-  --breakpoint-laptop: 992px;
+  --breakpoint-laptop: 960px;
+  --breakpoint-laptop-large: 1200px;
   --breakpoint-desktop: 1440px;
 }
 
@@ -59,7 +61,7 @@ body {
   font-family: "Montserrat-Regular", sans-serif;
   color: var(--text-color);
 
-  @media (max-width: 319px) {
+  @media screen and (max-width: 319px) {
     overflow: scroll;
   }
 }
@@ -110,13 +112,13 @@ img {
   flex-direction: column;
   gap: 16px;
 
-  @media (min-width: 768px) {
+  @media screen and (min-width: var(--breakpoint-tablet)) {
     display: block;
     padding: 64px 0;
     min-height: calc(90vh);
   }
 
-  @media (min-width: 1440px) {
+  @media screen and (min-width: var(--breakpoint-desktop)) {
     padding: 96px 0;
   }
 
@@ -129,4 +131,61 @@ img {
 
 .section:nth-child(odd) {
   background-color: white;
+}
+
+.notFound {
+  position: relative;
+  background: url("/assets/images/404.png") no-repeat center center/cover;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: calc(100vh - 84px);
+  text-align: center;
+  background: rgba(255, 255, 255, 0.9) url("/assets/images/404.png") no-repeat
+    center center/cover;
+
+  background-color: var(--main-bg);
+}
+
+.notFound::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0255, 255, 255, 0.5);
+  z-index: 1;
+}
+
+.notFound > * {
+  position: relative;
+  z-index: 2;
+}
+
+.heading {
+  margin-bottom: 1rem;
+  font-size: 3rem;
+  text-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
+}
+
+.text {
+  margin-bottom: 1.5rem;
+  font-size: 1.2rem;
+  font-weight: 700;
+  text-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+
+  @media screen and (min-width: 768px) {
+    font-size: 1.5rem;
+  }
+
+  @media screen and (min-width: 1440px) {
+    font-size: 1.8rem;
+  }
+}
+
+.text:last-of-type {
+  margin-bottom: 30px;
 }
