update Link style

--- a/src/components/UI/LinkButton/LinkButton.module.css
+++ b/src/components/UI/LinkButton/LinkButton.module.css
@@ -50,6 +50,7 @@
 
 .button.primary {
   background-color: var(--pink-color);
+  border: 3px solid var(--pink-color);
   color: var(--main-bg);
 }
 
