--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -1,3 +1,5 @@
+@import "../styles/variables.scss";
+
 .page {
   display: grid;
   grid-template-rows: auto 1fr auto;
@@ -10,11 +12,10 @@
   flex-direction: column;
   gap: 32px;
 
-  @media (min-width: 768px) {
+  @media screen and (min-width: $breakpoint-tablet) {
     padding: 56px 0 0;
   }
 }
-
 
 .header {
   margin: 0;
