--- a/src/components/Contacts/Contacts.module.scss
+++ b/src/components/Contacts/Contacts.module.scss
@@ -1,3 +1,5 @@
+@import "../../styles/variables.scss";
+
 .contacts {
   display: flex;
   justify-content: center;
@@ -27,11 +29,11 @@
   color: var(--pink-color);
   text-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
 
-  @media (min-width: 480px) {
+  @media screen and (min-width: $breakpoint-mobile-large) {
     text-align-last: left;
   }
 
-  @media (min-width: 1200px) {
+  @media screen and (min-width: $breakpoint-laptop-large) {
     margin-bottom: 1rem;
   }
 }
@@ -66,7 +68,7 @@
   color: var(--blue-color);
 }
 
-@media (min-width: 768px) {
+@media screen and (min-width: $breakpoint-tablet) {
   .title {
     font-size: 2rem;
     margin-bottom: 1rem;
@@ -81,7 +83,7 @@
   }
 }
 
-@media (min-width: 1200px) {
+@media screen and (min-width: $breakpoint-laptop-large) {
   .contacts {
     padding: 2rem;
   }
