--- a/src/components/Header/Burger/Burger.module.scss
+++ b/src/components/Header/Burger/Burger.module.scss
@@ -12,7 +12,7 @@
   cursor: pointer;
   z-index: 3;
 
-  @media (min-width: 769px) {
+  @media screen and (min-width: 769px) {
     display: none;
   }
 }
