--- a/src/components/Sections/Features/Features.module.scss
+++ b/src/components/Sections/Features/Features.module.scss
@@ -1,3 +1,5 @@
+@import "../../../styles/variables.scss";
+
 .features {
 }
 
@@ -9,7 +11,7 @@
   margin-bottom: 24px;
   font-size: 1rem;
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $breakpoint-tablet) {
     flex-direction: row;
     flex-wrap: wrap;
     gap: 2rem;
@@ -21,7 +23,7 @@
     font-size: 1.1rem;
   }
 
-  @media screen and (min-width: 1440px) {
+  @media screen and (min-width: $breakpoint-desktop) {
     font-size: 1.5rem;
     gap: 3rem;
     margin-bottom: 4rem;
@@ -46,21 +48,21 @@
   text-align: center;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: $breakpoint-mobile-large) {
   .featuresList li {
     width: 80%;
     margin: 0 auto;
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: $breakpoint-tablet) {
   .featuresList li {
     width: calc(33% - 2rem);
     margin-bottom: 2rem;
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: $breakpoint-laptop-large) {
   .featuresList li {
     width: calc(33% - 2rem);
     padding: 0 2rem 2rem;
@@ -77,7 +79,7 @@
   background-color: var(--main-bg);
   transform: translateX(-50%);
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $breakpoint-tablet) {
     width: 25%;
   }
 }
@@ -93,19 +95,19 @@
   position: relative;
   top: -0.8rem;
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $breakpoint-tablet) {
     top: -1rem;
 
     width: 28px;
     height: 28px;
   }
 
-  @media screen and (min-width: 960px) {
+  @media screen and (min-width: $breakpoint-laptop) {
     width: 32px;
     height: 32px;
   }
 
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: $breakpoint-laptop-large) {
     width: 36px;
     height: 36px;
   }
@@ -130,20 +132,20 @@
   cursor: pointer;
   transition: all 0.3s ease;
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $breakpoint-tablet) {
     max-width: 40%;
     padding: 0.8rem 1.5rem;
     font-size: 1.2rem;
     text-shadow: none;
   }
 
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: $breakpoint-laptop-large) {
     max-width: 40%;
     padding: 1rem 2.5rem;
     font-size: 1.3rem;
   }
 
-  @media screen and (min-width: 1440px) {
+  @media screen and (min-width: $breakpoint-desktop) {
     font-size: 1.3rem;
     padding: 1.2rem 3rem;
     font-size: 1.5rem;
