--- a/src/components/Sections/Hero/Hero.module.scss
+++ b/src/components/Sections/Hero/Hero.module.scss
@@ -43,12 +43,13 @@
     opacity: 1;
   }
   100% {
-    transform: translate(calc(var(--dx) * 1px), calc(var(--dy) * 1px)) scale(0.5);
+    transform: translate(calc(var(--dx) * 1px), calc(var(--dy) * 1px))
+      scale(0.5);
     opacity: 0;
   }
 }
 
-/* @media (max-width: 768px) {
+/* @media screen and (max-width: $breakpoint-tablet) {
   .hero {
     align-items: flex-start;
   }
