--- a/src/components/Sections/Testimonials/Testimonials.module.scss
+++ b/src/components/Sections/Testimonials/Testimonials.module.scss
@@ -1,3 +1,5 @@
+@import "../../../styles/variables.scss";
+
 .embla {
   position: relative;
   overflow: hidden;
@@ -8,11 +10,11 @@
   padding: 20px 20px 20px 0;
   margin: 0 auto;
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $breakpoint-tablet) {
     margin: 0 auto 2rem;
   }
 
-  @media screen and (min-width: 1440px) {
+  @media screen and (min-width: $breakpoint-desktop) {
     margin: 0 auto 3rem;
   }
 }
@@ -32,21 +34,21 @@
 
   transition: all 0.3s ease-in-out;
 
-  @media screen and (min-width: 480px) {
+  @media screen and (min-width: $breakpoint-mobile-large) {
     min-width: 300px;
   }
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $breakpoint-tablet) {
     min-width: calc((100% - 40px) / 3);
     border-radius: 200px 200px 10px 10px;
   }
 
-  @media screen and (min-width: 960px) {
+  @media screen and (min-width: $breakpoint-laptop) {
     width: calc(30% - 2rem);
     margin-right: 28px;
   }
 
-  @media screen and (min-width: 1440px) {
+  @media screen and (min-width: $breakpoint-desktop) {
     min-width: 400px;
   }
 }
@@ -68,7 +70,7 @@
   border-radius: 50%;
   object-fit: cover;
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $breakpoint-tablet) {
     width: 160px;
     height: 160px;
   }
@@ -83,11 +85,11 @@
   font-size: 0.8rem;
   margin-bottom: 0.5rem;
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $breakpoint-tablet) {
     font-size: 0.9rem;
   }
 
-  @media screen and (min-width: 1440px) {
+  @media screen and (min-width: $breakpoint-desktop) {
     font-size: 1rem;
     margin-bottom: 0.6rem;
   }
@@ -140,17 +142,17 @@
 
   transition: all 0.3s ease-in-out;
 
-  @media screen and (min-width: 480px) {
+  @media screen and (min-width: $breakpoint-mobile-large) {
     padding: 8px 16px;
     font-size: 1.2rem;
   }
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $breakpoint-tablet) {
     padding: 8px 16px;
     font-size: 1.2rem;
   }
 
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: $breakpoint-laptop-large) {
     padding: 10px 24px;
     font-size: 1.5rem;
   }
@@ -159,23 +161,23 @@
 .prevButton {
   left: 10px;
 
-  @media screen and (min-width: 480px) {
+  @media screen and (min-width: $breakpoint-mobile-large) {
     left: 45px;
   }
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $breakpoint-tablet) {
     left: 210px;
   }
 
-  @media screen and (min-width: 960px) {
+  @media screen and (min-width: $breakpoint-laptop) {
     left: 265px;
   }
 
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: $breakpoint-laptop-large) {
     left: 325px;
   }
 
-  @media screen and (min-width: 1440px) {
+  @media screen and (min-width: $breakpoint-desktop) {
     left: 400px;
   }
 }
@@ -183,23 +185,23 @@
 .nextButton {
   right: 10px;
 
-  @media screen and (min-width: 480px) {
+  @media screen and (min-width: $breakpoint-mobile-large) {
     right: 45px;
   }
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $breakpoint-tablet) {
     right: 210px;
   }
 
-  @media screen and (min-width: 960px) {
+  @media screen and (min-width: $breakpoint-laptop) {
     right: 265px;
   }
 
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: $breakpoint-laptop-large) {
     right: 325px;
   }
 
-  @media screen and (min-width: 1440px) {
+  @media screen and (min-width: $breakpoint-desktop) {
     right: 400px;
   }
 }
