--- a/src/components/UI/LinkButton/LinkButton.module.scss
+++ b/src/components/UI/LinkButton/LinkButton.module.scss
@@ -1,3 +1,5 @@
+@import "../../../styles/variables.scss";
+
 .button {
   display: flex;
   justify-content: center;
@@ -16,20 +18,20 @@
   cursor: pointer;
   transition: all 0.3s ease-in-out;
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $breakpoint-tablet) {
     max-width: 50%;
     padding: 0.8rem 1.5rem;
     font-size: 1.2rem;
     text-shadow: none;
   }
 
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: $breakpoint-laptop-large) {
     max-width: 40%;
     padding: 1rem 2.5rem;
     font-size: 1.3rem;
   }
 
-  @media screen and (min-width: 1440px) {
+  @media screen and (min-width: $breakpoint-desktop) {
     font-size: 1.3rem;
     padding: 1.2rem 3rem;
     font-size: 1.5rem;
