--- a/src/components/UI/Modal/Modal.module.scss
+++ b/src/components/UI/Modal/Modal.module.scss
@@ -22,20 +22,20 @@
     width: 350px;
   }
 
-  @media screen and (min-width: 480px) {
+  @media screen and (min-width: $breakpoint-mobile-large) {
     width: 440px;
   }
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $breakpoint-tablet) {
     width: 600px;
     padding: 30px;
   }
 
-  @media screen and (min-width: 960px) {
+  @media screen and (min-width: $breakpoint-laptop) {
     width: 800px;
   }
 
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: $breakpoint-laptop-large) {
     width: 1000px;
   }
 }
@@ -55,7 +55,7 @@
     width: 12px;
     height: 12px;
 
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: $breakpoint-tablet) {
       width: 20px;
       height: 20px;
     }
