--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,3 +1,5 @@
+@import "./variables.scss";
+
 :root {
   --header-bg: #fdf8ee;
   --footer-bg: #fdf8ee;
@@ -177,11 +179,11 @@ img {
   font-weight: 700;
   text-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $breakpoint-tablet) {
     font-size: 1.5rem;
   }
 
-  @media screen and (min-width: 1440px) {
+  @media screen and (min-width: $breakpoint-desktop) {
     font-size: 1.8rem;
   }
 }
