add hidden titles to sections

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -127,6 +127,19 @@ img {
   /* outline: 1px solid green; */
 }
 
+.section-hidden-heading  {
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
+}
+
 .section:nth-child(even) {
   background-color: var(--main-bg);
 }
