--- a/src/components/Sections/Hero/Hero.module.scss
+++ b/src/components/Sections/Hero/Hero.module.scss
@@ -8,6 +8,19 @@
   padding: 0;
 }
 
+.titleHidden {
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
+}
+
 .imageWrapper {
   width: 100%;
   position: relative;
