--- a/src/components/Container/Container.module.scss
+++ b/src/components/Container/Container.module.scss
@@ -6,8 +6,8 @@
   padding: 0 8px;
 
   @media screen and (min-width: $breakpoint-mobile-large) {
-    width: var;
-    padding: 0 12px;
+    width: $breakpoint-mobile-large;
+    padding: 0 16px;
   }
 
   @media screen and (min-width: $breakpoint-tablet) {
