--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -53,7 +53,7 @@
   opacity: 0;
   transition: all 0.3s ease;
 
-  @media screen and (min-width: $breakpoint-tablet) {
+  @media screen and (min-width: 768.1) {
     //768.1
     position: static;
 
