--- a/src/components/Logo/Logo.module.scss
+++ b/src/components/Logo/Logo.module.scss
@@ -1,3 +1,23 @@
-.logo{
-    
+@import "../../styles/variables.scss";
+
+.logo {
+  font-family: "SeaweedScript";
+  font-weight: 400;
+  font-style: italic;
+  font-size: 2rem;
+  color: var(--pink-color);
+  transition: all 0.3s ease;
+  z-index: 5;
+
+  @media screen and (min-width: $breakpoint-tablet) {
+    font-size: 2.5rem;
+  }
+
+  @media screen and (min-width: $breakpoint-desktop) {
+    font-size: 3rem;
+  }
+
+  &:hover {
+    transform: scale(1.05);
+  }
 }
