--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -4,7 +4,18 @@
   display: grid;
   grid-template-rows: auto 1fr auto;
   min-height: calc(100vh - 95px);
+  padding-top: 48px;
+  background-color: var(--main-bg);
 }
+
+.homePage {
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  min-height: calc(100vh - 95px);
+  background-color: var(--white-color);
+}
+
+
 
 .main {
   padding: 44px 0 0;
