--- a/src/components/UI/LinkButton/LinkButton.module.scss
+++ b/src/components/UI/LinkButton/LinkButton.module.scss
@@ -6,11 +6,12 @@
   align-items: center;
   padding: 0.7rem;
   margin: 0 auto;
-  max-width: 80%;
+  max-width: 60%;
 
   font-size: 1rem;
   font-weight: 600;
   letter-spacing: 0.05em;
+  text-align: center;
 
   border: none;
   border-radius: 8px;
@@ -20,21 +21,15 @@
 
   @media screen and (min-width: $breakpoint-tablet) {
     max-width: 50%;
-    padding: 0.8rem 1.5rem;
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     text-shadow: none;
   }
 
-  @media screen and (min-width: $breakpoint-laptop-large) {
-    max-width: 40%;
-    padding: 1rem 2.5rem;
-    font-size: 1.3rem;
-  }
+  // @media screen and (min-width: $breakpoint-laptop-large) {
+  // }
 
   @media screen and (min-width: $breakpoint-desktop) {
-    font-size: 1.3rem;
-    padding: 1.2rem 3rem;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
   }
 }
 
